--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
     //azure-sdk
     //采用compileonly解决和bmob-sdk内部依赖冲突问题
     compileOnly 'com.google.code.gson:gson:2.3'
@@ -49,5 +48,6 @@ dependencies {
     compile 'com.microsoft.azure:azure-notifications-handler:1.0.1@jar'
     //bmob-sdk
     compile 'cn.bmob.android:bmob-sdk:3.5.8'
-
+    implementation files('src/main/libs/filechoose.jar')
+    implementation files('src/main/libs/BmobPush_v1.0.0_0627.jar')
 }
